fix overflow issue that was causing page to scroll sideways always

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -35,6 +35,7 @@ body {
   height: 100%;
   position: relative;
   background: $bodyBackground;
+  overflow: hidden;
   margin: 0;
   padding: 3em 0 1.55em 0;
   color: $textColor;
