--- a/public/site.css
+++ b/public/site.css
@@ -1012,6 +1012,7 @@ body {
   height: 100%;
   position: relative;
   background: #f0f0f0;
+  overflow: hidden;
   margin: 0;
   padding: 3em 0 1.55em 0;
   color: #111111;
